--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gestión de Clientes</title>
-  <style>
-    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
-    input, button { padding: 8px; margin: 5px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #eee; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Panel Admin - Restaurante</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
 
-  <h2>Gestión de Clientes</h2>
+<body class="bg-gray-100 text-gray-900">
+  <div class="min-h-screen p-6">
+    <header class="flex justify-between items-center mb-8">
+      <h1 class="text-2xl font-bold">Panel de Administración</h1>
+      <button onclick="abrirModal()" class="btn bg-green-600 hover:bg-green-700">+ Nuevo Cliente</button>
+    </header>
 
-  <form id="clienteForm">
-    <input type="text" id="ID" placeholder="ID (solo para buscar/actualizar/eliminar)">
-    <input type="text" id="Nombre" placeholder="Nombre" required>
-    <input type="text" id="Teléfono" placeholder="Teléfono">
-    <input type="email" id="Email" placeholder="Email">
-    <input type="text" id="Dirección" placeholder="Dirección">
-    <br/>
-    <button type="button" onclick="crearCliente()">Crear</button>
-    <button type="button" onclick="buscarCliente()">Buscar</button>
-    <button type="button" onclick="actualizarCliente()">Actualizar</button>
-    <button type="button" onclick="eliminarCliente()">Eliminar</button>
-    <button type="button" onclick="listarClientes()">Listar Todos</button>
-  </form>
+    <section class="bg-white p-6 rounded-xl shadow-md mb-10">
+      <div class="flex items-center justify-between mb-4">
+        <h2 class="text-xl font-semibold">Listado de Clientes</h2>
+        <input type="text" id="buscador" oninput="filtrarTabla()" placeholder="Buscar cliente..." class="input-field w-1/3">
+      </div>
+      <div class="overflow-auto rounded-lg">
+        <table id="tablaClientes" class="w-full table-auto border-collapse hidden">
+          <thead class="bg-gray-200 text-gray-700"></thead>
+          <tbody class="text-sm"></tbody>
+        </table>
+      </div>
+    </section>
 
-  <div id="resultado"></div>
+    <div id="resultado" class="mt-6 text-sm text-gray-600 whitespace-pre-wrap"></div>
+  </div>
 
-  <table id="tablaClientes" style="display:none;">
-    <thead></thead>
-    <tbody></tbody>
-  </table>
+  <!-- Modal -->
+  <div id="modal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden">
+    <div class="bg-white p-6 rounded-xl shadow-lg w-full max-w-lg">
+      <h2 class="text-xl font-semibold mb-4">Nuevo / Editar Cliente</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <input id="modalID" type="hidden">
+        <input id="modalNombre" placeholder="Nombre" class="input-field">
+        <input id="modalTelefono" placeholder="Teléfono" class="input-field">
+        <input id="modalEmail" type="email" placeholder="Email" class="input-field">
+        <input id="modalDireccion" placeholder="Dirección" class="input-field">
+      </div>
+      <div class="mt-6 flex justify-end gap-2">
+        <button onclick="cerrarModal()" class="btn bg-gray-500 hover:bg-gray-600">Cancelar</button>
+        <button onclick="guardarCliente()" class="btn bg-blue-600 hover:bg-blue-700">Guardar</button>
+      </div>
+    </div>
+  </div>
 
   <script>
-    const API_URL = "/api/proxy"; // <- REEMPLAZA CON TU URL del Web App publicada
+    const API_URL = "/api/proxy";
 
     function postAPI(endpoint, action, data = {}) {
       return fetch(API_URL, {
@@ -52,39 +64,6 @@
       document.getElementById("resultado").innerText = JSON.stringify(msg, null, 2);
     }
 
-    function getFormData() {
-      return {
-        ID: document.getElementById("ID").value.trim(),
-        Nombre: document.getElementById("Nombre").value.trim(),
-        Teléfono: document.getElementById("Teléfono").value.trim(),
-        Email: document.getElementById("Email").value.trim(),
-        Dirección: document.getElementById("Dirección").value.trim()
-      };
-    }
-
-    function crearCliente() {
-      const data = getFormData();
-      postAPI("clientes", "crear", data).then(mostrarResultado);
-    }
-
-    function buscarCliente() {
-      const id = document.getElementById("ID").value.trim();
-      if (!id) return alert("Ingresá el ID");
-      postAPI("clientes", "buscar", { ID: id }).then(mostrarResultado);
-    }
-
-    function actualizarCliente() {
-      const data = getFormData();
-      if (!data.ID) return alert("Ingresá el ID para actualizar");
-      postAPI("clientes", "actualizar", data).then(mostrarResultado);
-    }
-
-    function eliminarCliente() {
-      const id = document.getElementById("ID").value.trim();
-      if (!id) return alert("Ingresá el ID para eliminar");
-      postAPI("clientes", "eliminar", { ID: id }).then(mostrarResultado);
-    }
-
     function listarClientes() {
       postAPI("clientes", "listar").then(res => {
         if (!res.success) return mostrarResultado(res);
@@ -92,22 +71,100 @@
       });
     }
 
+    function guardarCliente() {
+      const data = {
+        ID: document.getElementById("modalID").value.trim(),
+        Nombre: document.getElementById("modalNombre").value.trim(),
+        Teléfono: document.getElementById("modalTelefono").value.trim(),
+        Email: document.getElementById("modalEmail").value.trim(),
+        Dirección: document.getElementById("modalDireccion").value.trim()
+      };
+      const action = data.ID ? "actualizar" : "crear";
+      postAPI("clientes", action, data).then(res => {
+        mostrarResultado(res);
+        cerrarModal();
+        listarClientes();
+      });
+    }
+
+    function abrirModal(cliente = null) {
+      document.getElementById("modalID").value = cliente?.ID || "";
+      document.getElementById("modalNombre").value = cliente?.Nombre || "";
+      document.getElementById("modalTelefono").value = cliente?.Teléfono || "";
+      document.getElementById("modalEmail").value = cliente?.Email || "";
+      document.getElementById("modalDireccion").value = cliente?.Dirección || "";
+      document.getElementById("modal").classList.remove("hidden");
+    }
+
+    function cerrarModal() {
+      document.getElementById("modal").classList.add("hidden");
+    }
+
+    function eliminarClientePorID(id) {
+      if (!confirm("¿Estás seguro que deseas eliminar este cliente?")) return;
+      postAPI("clientes", "eliminar", { ID: id }).then(res => {
+        mostrarResultado(res);
+        listarClientes();
+      });
+    }
+
     function renderTabla(data) {
       const table = document.getElementById("tablaClientes");
       const thead = table.querySelector("thead");
       const tbody = table.querySelector("tbody");
+
       if (data.length === 0) {
-        table.style.display = "none";
+        table.classList.add("hidden");
         return;
       }
 
-      thead.innerHTML = "<tr>" + Object.keys(data[0]).map(k => `<th>${k}</th>`).join("") + "</tr>";
-      tbody.innerHTML = data.map(row =>
-        "<tr>" + Object.values(row).map(v => `<td>${v}</td>`).join("") + "</tr>"
-      ).join("");
+      thead.innerHTML = "<tr>" +
+        Object.keys(data[0]).map(k => `<th class='px-4 py-2 text-left'>${k}</th>`).join("") +
+        "<th class='px-4 py-2 text-left'>Acciones</th></tr>";
 
-      table.style.display = "table";
+      tbody.innerHTML = data.map(row => {
+        const acciones = `
+          <button onclick='abrirModal(${JSON.stringify(row)})' class='text-blue-600 hover:underline mr-2'>Editar</button>
+          <button onclick='eliminarClientePorID("${row.ID}")' class='text-red-600 hover:underline'>Eliminar</button>
+        `;
+        return "<tr class='border-b'>" +
+          Object.values(row).map(v => `<td class='px-4 py-2'>${v}</td>`).join("") +
+          `<td class='px-4 py-2'>${acciones}</td></tr>`;
+      }).join("");
+
+      table.classList.remove("hidden");
     }
+
+    function filtrarTabla() {
+      const texto = document.getElementById("buscador").value.toLowerCase();
+      const filas = document.querySelectorAll("#tablaClientes tbody tr");
+      filas.forEach(fila => {
+        fila.style.display = fila.innerText.toLowerCase().includes(texto) ? "" : "none";
+      });
+    }
+
+    window.onload = listarClientes;
   </script>
+
+  <style>
+    .input-field {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.375rem;
+      width: 100%;
+    }
+    .btn {
+      background-color: #4B5563;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 0.375rem;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background-color: #374151;
+    }
+  </style>
 </body>
+
 </html>
+
