--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
 
 <body class="bg-gray-100 text-gray-900">
   <div class="min-h-screen p-6 max-w-6xl mx-auto">
-    <header class="flex justify-between items-center mb-8">
+     <header class="flex justify-between items-center mb-8">
       <h1 class="text-2xl font-bold">Panel de Administración</h1>
       <nav>
         <button id="tabClientesBtn" class="btn-tab active" onclick="mostrarSeccion('clientes')">Clientes</button>
         <button id="tabUsuariosBtn" class="btn-tab" onclick="mostrarSeccion('usuarios')">Usuarios</button>
+        <button id="tabMesasBtn" class="btn-tab" onclick="mostrarSeccion('mesas')">Mesas</button>
       </nav>
     </header>
 
@@ -47,6 +48,22 @@
         </table>
       </div>
     </section>
+
+     <!-- Mesas -->
+    <section id="mesas" class="seccion hidden">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-semibold">Listado de Mesas</h2>
+        <input type="text" id="buscadorMesas" oninput="filtrarTabla('mesas')" placeholder="Buscar mesa..." class="input-field w-1/3" />
+        <button onclick="abrirModalMesa()" class="btn bg-green-600 hover:bg-green-700 ml-4">+ Nueva Mesa</button>
+      </div>
+      <div class="overflow-auto rounded-lg">
+        <table id="tablaMesas" class="w-full table-auto border-collapse hidden">
+          <thead class="bg-gray-200 text-gray-700"></thead>
+          <tbody class="text-sm"></tbody>
+        </table>
+      </div>
+    </section>
+
 
     <div id="resultado" class="mt-6 text-sm text-gray-600 whitespace-pre-wrap"></div>
   </div>
@@ -90,6 +107,29 @@
       <div class="mt-6 flex justify-end gap-2">
         <button onclick="cerrarModal('modalUsuario')" class="btn bg-gray-500 hover:bg-gray-600">Cancelar</button>
         <button onclick="guardarUsuario()" class="btn bg-blue-600 hover:bg-blue-700">Guardar</button>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal Mesa -->
+  <div id="modalMesa" class="modal hidden">
+    <div class="modal-content">
+      <h2 class="text-xl font-semibold mb-4">Nueva / Editar Mesa</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <input type="hidden" id="modalMesaID" />
+        <input id="modalMesaNumero" placeholder="Número de Mesa" class="input-field" />
+        <input id="modalMesaCapacidad" type="number" placeholder="Capacidad" class="input-field" />
+        <select id="modalMesaEstado" class="input-field">
+          <option value="libre">Libre</option>
+          <option value="reservada">Reservada</option>
+          <option value="ocupada">Ocupada</option>
+        </select>
+        <input id="modalMesaUbicacion" placeholder="Ubicación (ej: Terraza)" class="input-field" />
+      </div>
+      <div class="mt-6 flex justify-end gap-2">
+        <button onclick="cerrarModal('modalMesa')" class="btn bg-gray-500 hover:bg-gray-600">Cancelar</button>
+        <button onclick="guardarMesa()" class="btn bg-blue-600 hover:bg-blue-700">Guardar</button>
       </div>
     </div>
   </div>
@@ -359,6 +399,102 @@
       return texto.charAt(0).toUpperCase() + texto.slice(1);
     }
 
+     /* ----- MESAS ----- */
+    function listarMesas() {
+      postAPI("mesas", "listar").then(res => {
+        if (!res.success) return mostrarResultado(res);
+        renderTabla("mesas", res.data);
+      });
+    }
+
+    function abrirModalMesa(mesa = null) {
+      document.getElementById("modalMesaID").value = mesa?.ID || "";
+      document.getElementById("modalMesaNumero").value = mesa?.Número || "";
+      document.getElementById("modalMesaCapacidad").value = mesa?.Capacidad || "";
+      document.getElementById("modalMesaEstado").value = mesa?.Estado || "libre";
+      document.getElementById("modalMesaUbicacion").value = mesa?.Ubicación || "";
+      document.getElementById("modalMesa").classList.remove("hidden");
+    }
+
+    function guardarMesa() {
+      const data = {
+        ID: document.getElementById("modalMesaID").value.trim(),
+        Número: document.getElementById("modalMesaNumero").value.trim(),
+        Capacidad: document.getElementById("modalMesaCapacidad").value.trim(),
+        Estado: document.getElementById("modalMesaEstado").value,
+        Ubicación: document.getElementById("modalMesaUbicacion").value.trim(),
+      };
+      const action = data.ID ? "actualizar" : "crear";
+      postAPI("mesas", action, data).then((res) => {
+        mostrarResultado(res);
+        cerrarModal("modalMesa");
+        listarMesas();
+      });
+    }
+
+    function eliminarMesaPorID(id) {
+      if (!confirm("¿Estás seguro que deseas eliminar esta mesa?")) return;
+      postAPI("mesas", "eliminar", { ID: id }).then((res) => {
+        mostrarResultado(res);
+        listarMesas();
+      });
+    }
+
+    // Ampliamos mostrarSeccion
+    function mostrarSeccion(seccion) {
+      document.querySelectorAll(".seccion").forEach((s) => s.classList.add("hidden"));
+      document.getElementById(seccion).classList.remove("hidden");
+      document.querySelectorAll(".btn-tab").forEach(b => b.classList.remove("active"));
+      document.getElementById("tab" + capitalize(seccion) + "Btn").classList.add("active");
+
+      if (seccion === "clientes") listarClientes();
+      else if (seccion === "usuarios") listarUsuarios();
+      else if (seccion === "mesas") listarMesas();
+      clearResultado();
+    }
+
+    // Extend renderTabla para Mesas
+    function renderTabla(seccion, data) {
+      const table = document.getElementById(`tabla${capitalize(seccion)}`);
+      const thead = table.querySelector("thead");
+      const tbody = table.querySelector("tbody");
+
+      if (data.length === 0) {
+        table.classList.add("hidden");
+        return;
+      }
+
+      let columnas = Object.keys(data[0]);
+      columnas.push("Acciones");
+
+      thead.innerHTML =
+        "<tr>" + columnas.map(k => `<th class='px-4 py-2 text-left'>${k}</th>`).join("") + "</tr>";
+
+      tbody.innerHTML = data.map(row => {
+        let acciones = "";
+        if (seccion === "clientes") {
+          acciones = `
+            <button onclick='abrirModalCliente(${JSON.stringify(row)})' class='text-blue-600 hover:underline mr-2'>Editar</button>
+            <button onclick='eliminarClientePorID("${row.ID}")' class='text-red-600 hover:underline'>Eliminar</button>`;
+        } else if (seccion === "usuarios") {
+          acciones = `
+            <button onclick='abrirModalUsuario(${JSON.stringify(row)})' class='text-blue-600 hover:underline mr-2'>Editar</button>
+            <button onclick='eliminarUsuarioPorID("${row.ID}")' class='text-red-600 hover:underline'>Eliminar</button>`;
+        } else if (seccion === "mesas") {
+          acciones = `
+            <button onclick='abrirModalMesa(${JSON.stringify(row)})' class='text-blue-600 hover:underline mr-2'>Editar</button>
+            <button onclick='eliminarMesaPorID("${row.ID}")' class='text-red-600 hover:underline'>Eliminar</button>`;
+        }
+        return (
+          "<tr class='border-b'>" +
+          Object.values(row).map((v) => `<td class='px-4 py-2'>${v}</td>`).join("") +
+          `<td class='px-4 py-2'>${acciones}</td></tr>`
+        );
+      }).join("");
+
+      table.classList.remove("hidden");
+    }
+    
     // Inicializar con clientes visibles
     window.onload = () => mostrarSeccion("clientes");
   </script>
