--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <button id="tabClientesBtn" class="btn-tab active" onclick="mostrarSeccion('clientes')">Clientes</button>
         <button id="tabUsuariosBtn" class="btn-tab" onclick="mostrarSeccion('usuarios')">Usuarios</button>
         <button id="tabMesasBtn" class="btn-tab" onclick="mostrarSeccion('mesas')">Mesas</button>
+        <button id="tabProductosBtn" class="btn-tab" onclick="mostrarSeccion('productos')">Productos</button>
       </nav>
     </header>
 
